[FIX] web_studio: BS4, fix breadcrumb alignment
Closes https://github.com/odoo/enterprise/pull/2477

--- a/web_studio/static/src/scss/submenu.scss
+++ b/web_studio/static/src/scss/submenu.scss
@@ -30,7 +30,6 @@
                 }
 
                 + li:before {
-                    font-size: 1.3em;
                     font-weight: normal;
                     content: "\003E";
                 }
